# src/main/java/pl/wsb/students/api/AuthenticateResource.java
@@ -1,0 +1,21 @@
+package pl.wsb.students.api;
+
+import pl.wsb.students.consts.ApiEndpoints;
+import pl.wsb.students.model.AuthenticationRequest;
+
+import javax.ws.rs.Consumes;
+import javax.ws.rs.POST;
+import javax.ws.rs.Path;
+import javax.ws.rs.Produces;
+import javax.ws.rs.core.MediaType;
+import javax.ws.rs.core.Response;
+
+@Path(ApiEndpoints.AUTHENTICATE)
+@Produces(MediaType.APPLICATION_JSON)
+@Consumes(MediaType.APPLICATION_JSON)
+public class AuthenticateResource {
+    @POST
+    public Response postAuthenticate(AuthenticationRequest body) {
+        return Response.status(Response.Status.OK).entity("mock call ok...").build();
+    }
+}
